<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ResultActivity">

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/resultado"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#673AB7"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/imcTextView"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/o_seu_imc_de"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoTextView" />

    <TextView
        android:id="@+id/explicacaoTextView"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/de_acordo"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imcTextView" />

    <Button
        android:id="@+id/voltarButton"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:layout_marginBottom="128dp"
        android:onClick="voltarOnClick"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>